# LLMsVerifier

./: .dockerignore  .gitignore  ACP_API_DOCUMENTATION.md  ACP_COMPLETION_CHECKLIST.md  ACP_EXAMPLES_AND_DEMOS.md  ACP_FINAL_SUMMARY.md  ACP_IMPLEMENTATION_DESIGN.md  ACP_IMPLEMENTATION_GUIDE.md  ACP_IMPLEMENTATION_SUMMARY.md  ACP_RESEARCH_SUMMARY.md  ACP_VIDEO_COURSE_CONTENT.md  ACTUAL_CONFIG_CONTENT.md  AGENTS.md  API_KEYS.md  API_REFERENCE.md  BROTLI_DEPLOYMENT_GUIDE.md  BROTLI_IMPLEMENTATION_COMPLETE.md  BROTLI_IMPLEMENTATION_FINAL_SUMMARY.md  BROTLI_IMPLEMENTATION_SUMMARY.md  BROTLI_USER_DOCUMENTATION.md  CHALLENGES_ADDED_SUMMARY.md  CHALLENGES_FINAL_STATUS.md  CHALLENGES_IMPLEMENTATION_VERIFICATION.md  CHALLENGES_USE_ALL_PROVIDERS_POLICY.md  CHALLENGE_COMPLETION_CERTIFICATE.md  CHALLENGE_EXECUTION_REPORT.md  CLAUDE.md  CLEANUP_CHECKLIST.md  CODE_OF_CONDUCT.md  CODE_VERIFICATION_SYSTEM.md  COMPLETE_DOCUMENTATION_PLAN.md  COMPLETE_FINAL_REPORT.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPLETE_TESTING_REPORT.md  COMPLETION_CELEBRATION.md  COMPLETION_STATUS.md  COMPREHENSIVE_AUDIT_REMEDIATION_PLAN.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  (+233 more)
.github/: PULL_REQUEST_TEMPLATE.md
Upstreams/: GitFlic.sh  GitHub.sh  GitLab.sh  GitVerse.sh  Gitee.sh
Website/: README.md  acp-guide.md  index.html  index.md
challenges/: CHALLENGES_CATALOG.md  master_summary_.md
llm-verifier/desktop/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
llm-verifier/desktop/tauri/src-tauri/src/: main.rs
scripts/: deploy.sh  (+15 more)
(+908 files in other folders)
