[package]
name = "llm-verifier-desktop"
version = "1.0.0"
description = "LLM Verifier Desktop Application - Tauri"
authors = ["LLM Verifier Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "shell-open", "system-tray", "window-all-closed-event", "window-close-requested-event"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]